bubbles/bubbles-backend/src/main/istio/destination-rule-bubble-backend-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bubble-backend
spec:
  host: bubble-backend
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
