bubbles/bubbles-backend/src/main/istio/virtual-service-bubble-backend-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bubble-backend
spec:
  hosts:
  - bubble-backend
  http:
  - route:
    - destination:
        host: bubble-backend
    timeout: 1.000s
