bubbles/bubbles-backend/src/main/istio/virtual-service-bubble-backend-v1-mirror-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bubble-backend
spec:
  hosts:
  - bubble-backend
  http:
  - route:
    - destination:
        host: bubble-backend
        subset: version-v1
    mirror:
      host: bubble-backend
      subset: version-v2
