bubbles/bubbles-backend/src/main/istio/virtual-service-bubble-backend-v1_and_v2_75_25.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bubble-backend
spec:
  hosts:
  - bubble-backend
  http:
  - route:
    - destination:
        host: bubble-backend
        subset: version-v1
      weight: 75
    - destination:
        host: bubble-backend
        subset: version-v2
      weight: 25
